After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 747059 - Incorrect vertical positioning after resize in some rare cases
Incorrect vertical positioning after resize in some rare cases
Status: RESOLVED FIXED
Product: vte
Classification: Core
Component: general
0.40.x
Other Linux
: Normal minor
: ---
Assigned To: VTE Maintainers
VTE Maintainers
Depends on:
Blocks: 506438
 
 
Reported: 2015-03-30 21:11 UTC by Egmont Koblinger
Modified: 2015-03-30 21:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix (638 bytes, patch)
2015-03-30 21:12 UTC, Egmont Koblinger
committed Details | Review

Description Egmont Koblinger 2015-03-30 21:11:36 UTC
I think bug deserves a separate entry, rather than just being mentioned in bug 506438 comments 9-12.

1. Produce more output than the scrollback buffer's size.
2. Move the cursor upwards, e.g. "clear" or "echo -ne '\e[5H'"
3. Shrink the window size vertically.

Expected behavior: Drop a line from the bottom.

Actual behavior: Doesn't drop a line from bottom, instead scrolls out one line to the scrollback buffer from the top. In case of "clear" this results in the bash prompt being scrolled out, and the cursor forced back on-screen. The immediate user-facing behavior is that the prompt simply disappears.

In vte-0.40 combined with recent terminfo it's even more prominent, since the "clear" command also clears the scrollback buffer. In this case it's not required that more data was produced than the scrollback's size, it's enough if some contents already made it to the scrollback.

As complicated as it sounds, it boils down to an innocent typo, whereas the intended behavior is already documented correctly.
Comment 1 Egmont Koblinger 2015-03-30 21:12:20 UTC
Created attachment 300625 [details] [review]
Fix
Comment 2 Egmont Koblinger 2015-03-30 21:28:36 UTC
Fix committed (to older branches too).