emulation: Fix vertical positioning after resize in some rare cases

https://bugzilla.gnome.org/show_bug.cgi?id=747059
(cherry picked from commit 41d2e152878cc35d78a4dd8feb7cad52f088cdf9)